transpilation works on projectDir